--- a/src/app/pages/login-register/login-register.component.html
+++ b/src/app/pages/login-register/login-register.component.html
@@ -9,50 +9,60 @@
             <a class="nav-link active text-primary" id="pills-login-tab" data-toggle="pill" href="#pills-login" role="tab" aria-controls="pills-login"
                aria-selected="true">Login</a>
           </li>
-  
+
           <li class="nav-item">
             <a class="nav-link text-primary" id="pills-register-tab" data-toggle="pill" href="#pills-register" role="tab" aria-controls="pills-register"
                aria-selected="false">Register</a>
           </li>
         </ul>
       </div>
-  
+
       <div class="card-body pb-4">
         <div class="tab-content" id="pills-tabContent">
           <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="pills-login-tab">
             <form>
               <div class="form-group">
-                <input type="email" name="email" class="form-control" id="email" placeholder="Email" required autofocus>
+                <input type="email" name="email" class="form-control" id="email" placeholder="Email" [(ngModel)]="userData.email" required autofocus>
               </div>
-  
+
               <div class="form-group">
-                <input type="password" name="password" class="form-control" id="password" id="password" placeholder="Password" required>
+                <input type="password" name="password" class="form-control" id="password" id="password" [(ngModel)]="userData.password" placeholder="Password" required>
               </div>
-  
+
               <div class="text-center pt-4">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <!-- <h5>One way binding</h5>
+                <p>
+                  {{ 2+3 }}
+                  {{ message }}
+                  {{ profile.name }} {{ profile.tel }} {{ profile.gender }}
+                </p>
+                <h5>Two way binding</h5>
+                <p> {{ userData | json }} </p>
+              -->
+
+                <button type="button" class="btn btn-primary" (click)="submitLogin()">Login</button>
               </div>
             </form>
           </div>
-  
+
           <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="pills-register-tab">
             <form>
               <div class="form-group">
                 <input type="text" name="username" id="name" class="form-control" placeholder="Username" required autofocus>
               </div>
-  
+
               <div class="form-group">
                 <input type="email" name="email" id="email" class="form-control" placeholder="Email" required>
               </div>
-  
+
               <div class="form-group">
                 <input type="password" name="password" id="password" class="form-control" placeholder="Set a password" required>
               </div>
-  
+
               <div class="form-group">
                 <input type="password" name="password_confirmation" id="password-confirm" class="form-control" placeholder="Confirm password" required>
               </div>
-  
+
               <div class="text-center pt-2 pb-1">
                 <button type="submit" class="btn btn-primary">Register</button>
               </div>
